# hades2-mod-extension

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  env.cmake.example  env.cmake.exemple
.github/workflows/: build.yml  release.yml
core/: CMakeLists.txt
core/resources/: GamemodeScreen.sjson  init.lua  meta.sjson
core/resources/Text/: ScriptEx.de.sjson  ScriptEx.el.sjson  ScriptEx.en.sjson  ScriptEx.es.sjson  ScriptEx.fr.sjson  ScriptEx.it.sjson  ScriptEx.ja.sjson  ScriptEx.ko.sjson  ScriptEx.pl.sjson  ScriptEx.pt-BR.sjson  ScriptEx.ru.sjson  ScriptEx.tr.sjson  ScriptEx.uk.sjson  ScriptEx.zh-CN.sjson  ScriptEx.zh-TW.sjson
core/src/: Assert.cpp  Assert.h  ContentPathSelector.cpp  ContentPathSelector.h  Gamemode.cpp  HookTable.h  HookedClassFactory.h  HooksSystem.cpp  HooksSystem.h  LibraryComponents.cpp  LibraryComponents.h  LuaManager.cpp  Mod.cpp  Mod.h  ModApi.cpp  ModManager.cpp  ModManager.h  SymbolLoader.cpp  main.cpp  pch.h
core/src/hooks/: LoadBufferHook.cpp  LoadBufferHook.h  LocalizationHook.cpp  LocalizationHook.h
core/src/hud/: GamemodeScreen.cpp  GamemodeScreen.h  HookedClassFactory.h  HookedMenuScreen.cpp  HookedMenuScreen.h  MainMenuHandler.cpp  MainMenuHandler.h
core/src/include/: HadesModApi.h
core/src/lua/: LuaManager.cpp  LuaManager.h  ModLuaDefs.cpp
core/src/lua/classes/: GuiComponentButtonUserData.h  GuiComponentTextBoxUserData.h  GuiComponentUserData.h  GuiMenuScreenUserData.h
core/src/lua/defs/: LuaGUIComponentButtonFunctionDefs.cpp  LuaGUIComponentFunctionDefs.cpp  LuaGUIComponentTextBoxFunctionDefs.cpp  LuaGamemodeFunctionDefs.cpp  LuaMainMenuScreenFunctionDefs.cpp  LuaMenuScreenDefs.cpp  ModLuaDefs.cpp
core/src/lua/helpers/: LuaCallback.cpp  LuaClass.h
launcher/src/: main.cpp
thunderstore/: thunderstore.toml
